# snake_bevy6_egui

./: Cargo.toml  README.md
src/: app_state.rs  bevy_minigames.rs  egui_ui.rs  lib.rs  main.rs
src/bevy_minigames/: snake.rs
