[package]
name = "george"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
bevy_egui = "0.10"
rand = "0.7.3"

[lib]
name = "egui_paneled_playground_lib"
path = "src/lib.rs"


[[bin]]
name = "egui_paneled_playground_app"
path = "src/main.rs"
